--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,8 @@ PyPDF2==3.0.1
 python-docx
 tiktoken
 nltk==3.8.1
-python-docx
 textract
 docx2txt
-# langchain_experimental 
-# langchain_openai
 llama-index==0.5.0
+openai==0.27.0
+semchunk==0.1.0
