--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ tiktoken
 nltk==3.8.1
 textract
 docx2txt
-llama-index==0.5.0
-openai==0.27.0
+llama-index
+openai
 semchunk==0.1.0
 diff-match-patch
 httpx
