--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 streamlit==1.28.0
-litellm
 PyPDF2==3.0.1
 python-docx
 tiktoken
 nltk==3.8.1
 textract
 docx2txt
-llama-index
-openai
 semchunk==0.1.0
 diff-match-patch
-httpx
+openai==0.10.2
+llama-index==0.1.8
+litellm==0.2.0
+httpx==0.19.0
