--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.28.0
+streamlit
 PyPDF2==3.0.1
 python-docx
 tiktoken
@@ -7,7 +7,6 @@ textract
 docx2txt
 semchunk==0.1.0
 diff-match-patch
-openai==0.10.2
-litellm==0.2.0
-httpx==0.19.0
-llama-index==0.6.38
+openai
+litellm
+httpx
